# SongsRecommenderSystem

./: .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml  requirements.txt  setup.py
analysis_scripts/: input_output_sizes_check.py  raw_audio_augmentation.py
architectures/: __init__.py
architectures/assemblies/: aggregator_assembly.py  assembly.py  cnn_assembly_parent.py  cnn_dense_assembly.py  cnn_rnn_dense_assembly.py  dense_assembly.py  resnet_assembly.py  rnn_dense_assembly.py  vae_assembly.py
cloud/: cloud_utils.py
config/: yaml_utils.py
debug_train/: base_classifier_no_dict.py  basic_model.py
debug_train/debug_model_components/: assembly_try.py  train.py
model_components/classifier/: base_classifier.py
model_components/temporal_compressor/: conv1d_base_block.py  conv1d_block_no_dilation_no_skip.py  conv1d_block_no_dilation_with_skip.py  conv1d_block_with_dilation_no_skip.py  conv1d_block_with_dilation_with_skip.py  note.md
prototyping/: checkpoint_callback.py  dataset.py  evaluate.py  temporal_compressor_assembly.py  train.py  trainer_module.py
prototyping/assemblies/: cnn_dense_assembly.py  (+3 more)
readme/: example_titles
song_pipeline/: FeatureExtractor.py  SpectogramPipeline.py  constants.py  dataset.py  dict_types.py  feature_extractor.py  make_space.py  mover.py  spectogram_pipeline.py  tag_processor.py  utils.py
songs_scraper/: ncs_scraper.py  scraper_settings.py  youtube_scraper.py
user/: space_search.py  user.py  utils.py
workflow_actions/: json_handlers.py  paths.py  prepare_dirs.py  time_benchmark.py
(+81 files in other folders)
