[project]
name = "songsrecommendersystem"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "audiomentations>=0.42.0",
    "beautifulsoup4>=4.14.2",
    "librosa>=0.11.0",
    "lightning>=2.5.5",
    "numpy>=2.2.6",
    "optuna>=4.5.0",
    "optuna-integration>=4.5.0",
    "pre-commit>=4.4.0",
    "torch>=2.8.0",
    "torchaudio>=2.8.0",
    "wandb>=0.21.3",
]
